--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "watch_css": "cpx \"./src/css/style.css\" dist --watch",
     "watch_assets": "cpx \"src/assets/**/*\" dist/assets --watch",
 
-    "start": "rm -rf ./dist/ && npm-run-all --parallel build watch watch_html watch_css"
+    "start": "rm -rf ./dist/ && npm-run-all --parallel build watch watch_html watch_css watch_assets"
   },
   "repository": {
     "type": "git",
